Another about page fixing

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,8 +4,8 @@
 <title></title>
 </head>
 <body>
-<%= link_to image_tag('home.jpg'), 'home' %>
+<%= link_to image_tag('home.jpg'), root_path %>
 <p>Hello, this is the about page!</p>
-<%= link_to 'Home', pages_home_path %>
+<%= link_to 'Home', root_path %>
 </body>
 </html>
