--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,6 @@
 <body>
 <%= link_to image_tag('home.jpg'), 'about' %>
 <p>Hello, this is the home page!</p>
-<%= link_to 'About Page', pages_about_path %>
+<%= link_to 'About Page', about_path %>
 </body>
 </html>
