--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -17,7 +17,6 @@
 	<% end %>
 
 
-
 <%= form_for @article do |f| %>
    <p>
 	<%= f.label :title %> <br/>
@@ -32,3 +31,5 @@
    </p>
 
 <% end %>
+
+<%= link_to "Back to articles listing", articles_path %>
