--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+
 <h1>Showing selected article</h1>
 
 <p>
@@ -11,3 +12,7 @@ Title: <%= @article.title %>
 Description: <%= @article.description %>
 
 </p>
+
+<%= link_to "Edit this article", edit_article_path(@article) %> |
+
+<%= link_to "Back to articles listing", articles_path %>
