--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title></title>
-</head>
-<body>
+
 <%= link_to image_tag('home.jpg'), 'about' %>
 <p>Hello, this is the home page!</p>
 <%= link_to 'About Page', about_path %>
-</body>
-</html>
+<br/>
+<%= link_to "Alpha Blog", articles_path %>
