--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
+<div class ="center jumbotron">
+<h1> Welcome </h1>
+<%= link_to "Sing up", "#", class: "btn btn-primary btn-lg" %>
 
-<p>Hello, this is the home page!</p>
-<%= link_to 'About Page', about_path %>
-<br/>
-<%= link_to "Alpha Blog", articles_path %>
+</div>
+
