--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,25 @@
+<h2 align="center">Title: <%= @article.title %></h2>
 
-<h1>Showing selected article</h1>
+<div class="well col-xs-8 col-xs-offset-2">
 
-<p>
+<h4 class="center description"><strong>Description:</strong></h4>
 
-Title: <%= @article.title %>
+<hr>
 
-</p>
+<%= simple_format(@article.description) %>
 
-<p>
+<div class="article-actions">
 
-Description: <%= @article.description %>
+<%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
 
-</p>
+<%= link_to "Delete this article", article_path(@article), method: :delete,
 
-<%= link_to "Edit this article", edit_article_path(@article) %> |
+data: { confirm: "Are you sure you want to delete the article?"},
 
-<%= link_to "Back to articles listing", articles_path %>
+class: "btn btn-xs btn-danger" %>
+
+<%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
+
+</div>
+
+</div>
