sessions completed withoutrestricts

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<h1> Create a new article </h1>
+<h1> What's in your mind </h1>
 
 	<% if @article.errors.any? %>
 
@@ -32,4 +32,4 @@
 
 <% end %>
 
-<%= link_to "Back to articles listing", articles_path %>
+<%= link_to "Back to all posts", articles_path %>
