--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
 
 <small>
 
-Copyright © <a href="enter in a link here">Jawaker</a>
+Copyright © <a href="enter in a link here">Jawaker Internship</a>
 
 by <a href="enter in a link here">Nada Al-Shamayleh</a>
 
