--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 
 <head>
 
-<title>AlphaBlog</title>
+<title>Nada's Task</title>
 
 <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
 
@@ -27,7 +27,6 @@
 </div>
 
 <%= render 'layouts/footer' %>
-<%= debug(params) if Rails.env.development? %>
 </body>
 
 </html>
