--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
-<div class ="center jumbotron">
-<h1> Welcome </h1>
-<%= link_to "Sing up", "#", class: "btn btn-primary btn-lg" %>
+<div class="center jumbotron">
+
+<h1>Welcome</h1>
+
+<%= link_to "Sign up now", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %>
 
 </div>
-
