--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,15 +18,11 @@
 
 <div class="article-meta-details">
 
-<small>Created by: <%= article.user.username if article.user%>,
+<small>Created by: <%= link_to article.user.username, article_path(article.user) if article.user%>,
 
 <%= time_ago_in_words(article.created_at) %> ago,
 
 last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
-
-</div>
-
-</div>
 
 <% if logged_in? && current_user == article.user %>
 
