Task2 without active storage

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,9 +4,9 @@
 
 <small>
 
-Copyright © <a href="enter in a link here">Jawaker Internship</a>
+Copyright © <a href="https://www.jawaker.com/">Jawaker Internship</a>
 
-by <a href="enter in a link here">Nada Al-Shamayleh</a>
+by <a href="https://jo.linkedin.com/in/nada-al-shamayleh-61009719a">Nada Al-Shamayleh</a>
 
 </small>
 
