--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -52,10 +52,28 @@
 
 </div>
 
+
+<div class="form-group">
+
+<div class="control-label col-sm-2">
+
+<%= f.label :profile_picture %>
+
+</div>
+
+<div class="col-sm-8">
+
+<%= f.file_field :profile_picture %>
+
+</div>
+
+</div>
+
+
+
 <div class="form-group">
 
 <div class="col-sm-offset-2 col-sm-10">
-
 <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: 'btn btn-primary btn-lg') %>
 
 </div>
