--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,11 @@
 
 <div class="well col-md-4 col-md-offset-4">
 
-<li><%= link_to gravatar_for(user), user_path(user) %></li>
+<% if user.profile_picture.attached? %>
+
+<li><%= link_to image_tag(user.profile_picture, style: 'width:45%'), user_path(user) %></li>
+
+<%end%>
 
 <li class="article-title">
 
