--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -1,12 +1,20 @@
-<h1 align="center">Submissions Page </h1>
+<h1 align="center">Submission <%= @submission.id %> </h1>
 
-<div class="row">
+<p>
+<b> <h4> Source code: </h4> </b>
+<%= simple_format(@submission.code) %>
+</p>
+<hr>
 
-<div class="col-md-4 col-md-offset-4 center">
+<p>
+<b> <h4> Input: </h4> </b>
+ <%= simple_format(@submission.input) %>
+ </p>
+<hr>
 
+<p>
+<b> <h4> Output: </h4></b>
+  <%= simple_format(@submission.output) %>
+</p>
 
-</div>
-
-</div>
-
-
+<%= link_to "Back to your submissions", user_path(@submission.user), class: "btn btn-xs btn-success" %>
