--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -16,5 +16,13 @@
 <b> <h4> Output: </h4></b>
   <%= simple_format(@submission.output) %>
 </p>
+<hr>
+
+<p>
+<b> <h4> Status: </h4></b>
+  <%= simple_format(@submission.status) %>
+</p>
+
+
 
 <%= link_to "Back to your submissions", user_path(@submission.user), class: "btn btn-xs btn-success" %>
