--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$navbar-default-bg: #361849;
+$navbar-default-bg: #07465e;
 
 @import "bootstrap-sprockets";
 
@@ -46,7 +46,7 @@ height: 550px;
 
 .jumbotron h1 {
 
-color: #4c3b47;
+color: #064c67;
 
 text-align: center;
 
