--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -28,46 +28,12 @@
 
       <ul class="nav navbar-nav">
 
-        <li><%= link_to "Home", root_path %></li>
-
-        <li><a href="#">Link</a></li>
-        s
-        <li class="dropdown">
-
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
-
-          <ul class="dropdown-menu">
-            <li><%= link_to "Create new submission", new_submission_path %></li>
-
-            <li><a href="#">Another action</a></li>
-
-            <li><a href="#">Something else here</a></li>
-
-            <li role="separator" class="divider"></li>
-
-            <li><a href="#">Separated link</a></li>
-
-            <li role="separator" class="divider"></li>
-
-            <li><a href="#">One more separated link</a></li>
-
-          </ul>
-
-        </li>
+       <li><%= link_to "All users", users_path, color: "black" %></li>
+        
+      <li><%= link_to "Create new submission", new_submission_path %></li>
 
       </ul>
 
-      <form class="navbar-form navbar-left" role="search">
-
-        <div class="form-group">
-
-          <input type="text" class="form-control" placeholder="Search">
-
-        </div>
-
-        <button type="submit" class="btn btn-default">Submit</button>
-
-      </form>
 
       <ul class="nav navbar-nav navbar-right">
 
@@ -84,10 +50,6 @@
               <li><%= link_to "View your profile", user_path(current_user) %></li>
 
               <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
-
-              <li role="separator" class="divider"></li>
-
-              <li><a href="#">additional empty link</a></li>
 
             </ul>
 
