--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -52,6 +52,21 @@
 
       </div>
 
+	 <div class="form-group">
+
+        <div class="control-label col-sm-2">
+
+          <%= f.label :gender %>
+
+        </div>
+
+        <div class="col-sm-8">
+
+          <%= f.select(:gender, options_for_select([['Male', 'Male'], ['Female', 'Female'], ['Cat', 'Cat']])) %>
+
+        </div>
+
+      </div>
 
       <div class="form-group">
 
